--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "core-js": "3.2.1",
     "d3": "5.12.0",
     "powerbi-visuals-api": "~3.8.0",
-    "powerbi-visuals-utils-dataviewutils": "2.2.1"
+    "powerbi-visuals-utils-dataviewutils": "^2.2.1"
   },
   "devDependencies": {
     "ts-loader": "6.1.0",
